@@ -4,6 +4,7 @@
     * New Checks for Siemens Blades (BX600)
 
     WATO:
+    * Added permission to control the "clone host" feature in WATO
     * FIX: remove line about number of rules in rule set overview
       (that garbled the logical layout)
 
